gccida/c1/set_sched_group_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_sched_group_p/src/sched-deps.c:931:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( i = ( __int64)nonnote_insn[3]; i; i = *( _QWORD *)( i + 16) ) 
                    ^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_sched_group_p/src/sched-deps.c:932:44: error: use of undeclared identifier 'reg_note'; did you mean 'reg_names'?
add_dependence( insn, *( rtx *)( i + 8), ( reg_note)*( unsigned __int8 *)( i + 2)); 
                                           ^~~~~~~~
                                           reg_names
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_sched_group_p/src/regs.h:166:21: note: 'reg_names' declared here
extern const char * reg_names[FIRST_PSEUDO_REGISTER];
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_sched_group_p/src/sched-deps.c:932:53: error: invalid operands to binary expression ('const char *[53]' and 'unsigned char *')
add_dependence( insn, *( rtx *)( i + 8), ( reg_note)*( unsigned __int8 *)( i + 2)); 
                                         ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/set_sched_group_p/src/obj/sched-deps.o] Error 1
